# deadpy

./: .pre-commit-hooks.yaml  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: analysis.rs  config.rs  discovery.rs  lib.rs  main.rs  output.rs  parser.rs  whitelist.rs
tests/: integration.rs
tests/fixtures/: all_exports.py  decorators.py  dunders.py  simple.py  whitelist.py  whitelist_target.py
